@@ -176,6 +176,7 @@ class DevpiAuthenticationPolicy(CallbackAuthenticationPolicy):
     def __init__(self, xom):
         self.realm = "pypi"
         self.auth = Auth(xom.model, xom.config.secret)
+        self.hook = xom.config.hook.devpiserver_auth_credentials
 
     def unauthenticated_userid(self, request):
         """ The userid parsed from the ``Authorization`` request header."""
@@ -211,6 +212,9 @@ class DevpiAuthenticationPolicy(CallbackAuthenticationPolicy):
             raise ValueError("Unknown authentication status: %s" % status)
 
     def _get_credentials(self, request):
+        results = list(filter(None, self.hook(request)))
+        if results:
+            return results[0]
         authorization = request.headers.get('X-Devpi-Auth')
         if not authorization:
             # support basic authentication for setup.py upload/register
