@@ -1,6 +1,8 @@
 2.2.0.DEV
 ----------------
 
+- add new plugin hook to extract credentials from request
+
 - fix issue216: use sha256 instead of md5 checksums for serving own files
   (BACKWARD INCOMPATIBLE: needs export/import)
 
